# setcoredump

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  setcoredump.cpp  setcoredump.h
